--- a/practice/Base.lproj/Main.storyboard
+++ b/practice/Base.lproj/Main.storyboard
@@ -780,13 +780,29 @@
                                     <action selector="save:" destination="8bx-Ih-mcm" eventType="touchUpInside" id="edu-mV-PNU"/>
                                 </connections>
                             </button>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="mg5-3k-xVd">
+                                <rect key="frame" x="0.0" y="20" width="600" height="520"/>
+                                <date key="date" timeIntervalSinceReferenceDate="475999987.311867">
+                                    <!--2016-02-01 06:13:07 +0000-->
+                                </date>
+                                <connections>
+                                    <action selector="changeDate:" destination="8bx-Ih-mcm" eventType="valueChanged" id="JGd-EX-Pih"/>
+                                </connections>
+                            </datePicker>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="cuo-qm-cWg" secondAttribute="trailing" id="Jso-xo-DsC"/>
+                            <constraint firstItem="cuo-qm-cWg" firstAttribute="top" secondItem="mg5-3k-xVd" secondAttribute="bottom" id="Pof-5Y-CiQ"/>
+                            <constraint firstAttribute="trailing" secondItem="mg5-3k-xVd" secondAttribute="trailing" id="Ps9-Al-7ew"/>
                             <constraint firstItem="Mru-YH-cRI" firstAttribute="top" secondItem="cuo-qm-cWg" secondAttribute="bottom" id="WFV-qa-wsK"/>
+                            <constraint firstItem="mg5-3k-xVd" firstAttribute="leading" secondItem="ePn-ty-5Nz" secondAttribute="leading" id="ZtR-aQ-bia"/>
+                            <constraint firstItem="mg5-3k-xVd" firstAttribute="top" secondItem="Py0-kJ-6tt" secondAttribute="bottom" id="quS-Fp-rxp"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="datePicker" destination="mg5-3k-xVd" id="HqG-JE-Oju"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eit-OZ-DYS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
