--- a/practice/Base.lproj/Main.storyboard
+++ b/practice/Base.lproj/Main.storyboard
@@ -998,7 +998,7 @@
         <image name="tabelog" width="512" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="yTU-jM-l0j"/>
+        <segue reference="1sG-Dv-Dpp"/>
         <segue reference="6m8-2U-Anj"/>
     </inferredMetricsTieBreakers>
 </document>
